Fix: Overflow wrap.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,4 +23,5 @@ a {
 
 pre {
   font-family: "Raleway", sans-serif;
+  overflow-wrap: break-word;
 }
